<resources>
    <string name="app_name">SAGI</string>
    <string name="SAGI">SAGI</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="welcome_to_sagi">Welcome To SAGI</string>
    <string name="login">Login</string>
    <string name="regster_now">Regster Now</string>
    <string name="scan_like_an_expert">Scan Like an Expert</string>
    <string name="new_account_sign_up_here">New Account ? Sign Up here</string>
    <string name="login_button">LOGIN BUTTON</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email_id">Enter your Email id</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="enter_your_correct_email_id">Enter your correct Email id</string>
    <string name="todo">TODO</string>
    <string name="enter_your_password_1">Enter your Password</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="register">Register</string>
    <string name="already_an_account_login_here">Already an account ? Login Here</string>
    <string name="todo1">TODO</string>
    <string name="please_enter_your_registered_email_id_to_receive_password_reset_link">Please enter your registered email id to receive password reset link</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
</resources>