<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Signup">


    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="317dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_name"
        android:ems="10"
        android:hint="@string/enter_your_full_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.099"
        android:autofillHints="" />

    <EditText
        android:id="@+id/emailid"
        android:layout_width="320dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_baseline_alternate_email_24"
        android:ems="10"
        android:hint="@string/enter_your_correct_email_id"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/showpass"
        android:layout_width="33dp"
        android:layout_height="47dp"
        android:layout_below="@id/emailid"

        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailid"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/enter_your_password_1"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailid"
        android:autofillHints="" />


    <EditText
        android:id="@+id/phone"
        android:layout_width="327dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_phone"
        android:ems="10"
        android:hint="@string/enter_your_phone_number"
        android:inputType="textPhonetic"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:autofillHints="" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:background="#000080"
        android:padding="10dp"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/phone" />

    <TextView
        android:id="@+id/createtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_an_account_login_here"
        android:textColor="#000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineAmbientShadowColor="@color/white"
        android:visibility="invisible"
        app:flow_verticalBias="0.26"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createtxt"
        app:layout_constraintVertical_bias="0.466" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="139dp"
        android:layout_height="92dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        app:srcCompat="@drawable/sagi"
        android:contentDescription="@string/todo1" />
</androidx.constraintlayout.widget.ConstraintLayout>