<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@drawable/back">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="#D6D6D6"
        >

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="30dp"
            android:text="@string/please_enter_your_registered_email_id_to_receive_password_reset_link"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_email"
            android:layout_below="@+id/text3"
            android:text="@string/email"
            android:layout_marginTop="50dp"
            android:padding="6dp"
            android:textSize="20sp"
            android:textColor="#555555"
            />

        <EditText
            android:id="@+id/textpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reset_email"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="29dp"
            android:hint="@string/enter_your_registered_email"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textColor="#000"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_button"
                android:layout_below="@+id/textpass"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:text="@string/reset_password"
                android:background="#000080"
                />

        <ProgressBar
            android:id="@id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="450dp"

            android:outlineAmbientShadowColor="@color/white"
            android:visibility="invisible"
            app:flow_verticalBias="0.26"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_button" />
    </RelativeLayout>

</ScrollView>